# MyWiki

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
Agents/: graph.json  index.md
Pipeline/: load_doc.py  logging_utils.py  main.py  retrieval_agent.py  summary_agent.py
backend/: __init__.py  app.py  knowledge_graph.py
chromadb/: chroma.sqlite3
docs/: api.md  index.md  installation.md
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: FileList.jsx  FileViewer.jsx  GraphPanel.jsx  Header.jsx  StatusBar.jsx  Tabs.jsx  UploadBox.jsx
frontend/src/pages/: Chat.jsx  Graphify.jsx
reference/: extract_graph.py
src/python_boilerplate/: __init__.py  cli.py
tests/: test_backend_app.py  test_knowledge_graph.py  test_ollama.py  test_pipeline_main.py  test_python_boilerplate.py  test_summary_agent.py
