[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "MyWiki"
version = "0.1.0"
description = "Prototype Memex-style wiki with a FastAPI upload backend."
readme = "README.md"
authors = [
  {name = "Arko Bera", email = "arkobera77@gmail.com"}
]
maintainers = [
  {name = "Arko Bera", email = "arkobera77@gmail.com"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Typing :: Typed",
]
license = "MIT"
dependencies = [
  "typer",
  "rich",
  "fastapi",
  "python-multipart",
  "uvicorn",
  "langchain>=1.3.1",
  "langchain-community>=0.4.1",
  "langchain-ollama>=0.3.3",
  "langchain-text-splitters>=1.0.0",
  "chromadb>=1.3.0",
  "sentence-transformers>=5.1.2",
  "pypdf>=6.1.3",
]
requires-python = ">=3.12"

[project.scripts]
mywiki-backend = "backend.app:main"

[dependency-groups]
dev = [
  { include-group = "lint" },
  { include-group = "test" },
  { include-group = "typecheck" },
]
lint = [
  "ruff",
]
test = [
  "coverage",
  "httpx",
  "pytest",
]
typecheck = [
  "ty",
]
docs = [
  "zensical",
  "mkdocstrings-python",
]

[tool.coverage.run]
branch = true
parallel = true

[tool.setuptools]
packages = ["backend", "Pipeline"]

[tool.uv]
package = true
default-groups = ["dev"]
